--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
-    "sqlite3": "^5.1.6"
+    "redis": "^4.6.7",
+    "sqlite3": "^5.1.6",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
