--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "supertest": "^6.3.3",
+    "@types/jest": "^29.5.2",
+    "cross-env": "^7.0.3",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   }
 }
