--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
@@ -25,13 +26,12 @@
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.6",
-    "validator": "^13.9.0",
-    "cross-env": "^7.0.3"
+    "validator": "^13.9.0"
   },
   "devDependencies": {
-    "supertest": "^6.3.3",
     "@types/jest": "^29.5.2",
     "jest": "^29.5.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
